fix [oqun] header add [artemy] program icon in text add [community-circle] program icon in text add [crystallization] program icon in text add [ohmt] program icon in text & architect-designer contact add [minor] letter-spacing rewrite [cv] button

--- a/projects/oqun/project.css
+++ b/projects/oqun/project.css
@@ -11,3 +11,9 @@
   line-height: 80%;
   font-size: 192px;
 }
+
+@media (max-width: 800px) {
+  .project-header h1 {
+    font-size: 96px;
+  }
+}
