--- a/styles/base-items/modifier.css
+++ b/styles/base-items/modifier.css
@@ -27,6 +27,7 @@
   font-size: var(--minor-font-size);
   font-weight: normal;
   opacity: 60%;
+  letter-spacing: 0.3px;
 }
 
 .text-color {
